--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version"      : "0.0.1",
     "description"  : "MCP23017 controller",
     "dependencies" : {
-		"node-mcp23017":"0.0.2"
+		"node-mcp23017"
     },
     "license"     : "Apache-2.0",
     "homepage"    : "https://github.com/afulki/node-red-contrib-mcp23017",
     "repository"  : {
         "type":"git",
-        "url":"https://github.com/afulki/node-red-contrib-mcp23017"
+        "url":"https://github.com/cymplecy/node-red-contrib-mcp23017"
     },
     "keywords": [ "node-red", "mcp23017", "raspberry pi", "output", "slice of pi/o" ],
     "node-red"     : {
